// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Truncate generates styles 1`] = `
<div
  className="jDVqiq"
>
  generates styles
</div>
`;

exports[`Truncate renders 1`] = `
<div
  className="jDVqiq"
>
  renders
</div>
`;
